change input of confirm_delivery and dipatch
