# sandsack-management-backend/docs/swagger.yaml
@@ -37,11 +37,6 @@ definitions:
       order_id:
         type: integer
     type: object
-  models.ConfirmDeliveryInput:
-    properties:
-      order_id:
-        type: integer
-    type: object
   models.CreateOrderInput:
     properties:
       address_to:
@@ -67,13 +62,6 @@ definitions:
         type: string
       phone:
         type: string
-    type: object
-  models.DispatchOrderInput:
-    properties:
-      driver_id:
-        type: integer
-      order_id:
-        type: integer
     type: object
   models.EditOrderInput:
     properties:
@@ -151,8 +139,6 @@ definitions:
         items:
           $ref: '#/definitions/models.OrderEquipment'
         type: array
-      estimated_time:
-        type: integer
       id:
         type: integer
       logs:
@@ -293,6 +279,44 @@ definitions:
 info:
   contact: {}
 paths:
+  /admin/orders/:
+    get:
+      consumes:
+      - application/json
+      description: AdminAllOrders - list of all orders
+      parameters:
+      - description: ' '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Id of the order
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: AdminAllOrders - list of all orders
+      tags:
+      - Order
   /core/driver/add:
     post:
       consumes:
@@ -575,6 +599,31 @@ paths:
       summary: This endpoint adds new priority
       tags:
       - Core
+  /create_user/:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint is implemented to register new user by Einsatzleiter
+        and get a new token pair
+      parameters:
+      - description: User registration model
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateUser'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User has been created
+        "400":
+          description: Bad request (e.g. parameter in body is not given or incorrect)
+        "401":
+          description: Permission to create the user is not given
+      summary: Create a new user (branch) in the system
+      tags:
+      - Admin
   /email_verification:
     post:
       consumes:
@@ -773,7 +822,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: ""
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
         "400":
           description: Bad Request
           schema:
@@ -800,12 +851,11 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: ConfirmDelivery
-        in: body
-        name: input
+      - description: id of the order
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/models.ConfirmDeliveryInput'
+        type: string
       produces:
       - application/json
       responses:
@@ -838,12 +888,11 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: DispatchOrder
-        in: body
-        name: input
+      - description: id of the order
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/models.DispatchOrderInput'
+        type: string
       responses:
         "200":
           description: OK
@@ -933,31 +982,6 @@ paths:
             $ref: '#/definitions/models.ErrorResponse'
       tags:
       - Order
-  /user/:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint is implemented to register new user by Einsatzleiter
-        and get a new token pair
-      parameters:
-      - description: User registration model
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreateUser'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: User has been created
-        "400":
-          description: Bad request (e.g. parameter in body is not given or incorrect)
-        "401":
-          description: Permission to create the user is not given
-      summary: Create a new user (branch) in the system
-      tags:
-      - Admin
   /users/:
     get:
       consumes:
